argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-app-new
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    ingress.kubernetes.io/rewrite-target: /$2
    alb.ingress.kubernetes.io/healthcheck-path: /argo/
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/backend-protocol-version: HTTPS
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
    rules:
    - http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  number: 2746
            path: /argo/*
            pathType: ImplementationSpecific
